<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tournee_activity">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:background="#0095B6"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="78dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="10dp"
            android:id="@+id/login_dispalay" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/home_menu"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:id="@+id/btnAcceuil"
            android:adjustViewBounds="false" />
        <ImageButton
            android:id="@+id/btndeconnexion"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/close"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="300dp"
            />
    </RelativeLayout>

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="65dp"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/etape1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#E3DAC9"
                    android:orientation="vertical"
                    android:textAlignment="center">


                    <TextView
                        android:text="@string/kilometrage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="111dp"
                        android:id="@+id/KMtextView"
                        android:textColor="#000000"
                        android:layout_marginLeft="15dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:text="@string/cash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:id="@+id/CashtextView"
                        android:layout_marginLeft="15dp"
                        android:textColor="#000000" />
                    <EditText
                        android:id="@+id/CashRecu"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/CashtextView"
                        android:layout_toRightOf="@+id/CashtextView"

                        android:inputType="number"/>
                    <Button
                        android:id="@+id/buttonannuler"
                        android:text="@string/annuler"
                        android:layout_marginTop="300dp"
                        android:layout_marginLeft="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="annuler"
                        android:layout_centerHorizontal="true" />

                    <Button
                        android:id="@+id/btnsuivant"
                        android:text="@string/suivant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="suivant"
                        android:layout_alignTop="@+id/buttonannuler"
                        android:layout_toRightOf="@+id/buttonannuler"
                        android:layout_toEndOf="@+id/buttonannuler" />

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/KMFin"
                        android:layout_alignTop="@+id/KMtextView"
                        android:layout_alignLeft="@+id/CashRecu"
                        android:layout_alignStart="@+id/CashRecu"
                        android:inputType="number"/>


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/etape2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#E3DAC9"
                    android:orientation="vertical"
                    android:textAlignment="center">

                    <TextView
                        android:background="#0095B6"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="ID Produit"
                        android:id="@+id/Idpr"
                        android:textSize="12dp"
                        android:textColor="#fff"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:background="#0095B6"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="Designation"
                        android:id="@+id/Desig"
                        android:textSize="12dp"
                        android:textColor="#fff"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_horizontal"
                        />

                    <TextView
                        android:background="#0095B6"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_horizontal"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="Quantité Réelle"
                        android:id="@+id/qtestim"
                        android:textColor="#fff"
                        android:textSize="12dp"
                        />

                    <TextView
                        android:background="#0095B6"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_horizontal"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:id="@+id/qtereel"
                        android:text="Quantité Estimé"
                        android:textColor="#fff"
                        />

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="258dp"
                        android:id="@+id/listProd"
                        android:layout_weight="1.52"
                        android:choiceMode="singleChoice"
                        android:listSelector="#8A2CBBFF"/>
                    <Button
                        android:layout_marginTop="300dp"
                        android:id="@+id/btnsuivant2"
                        android:text="@string/suivant"
                        android:onClick="suivant2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="240dp"
                        />

                    <Button
                        android:layout_marginTop="300dp"
                        android:id="@+id/btnprecedent"
                        android:text="@string/precedent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="130dp"
                        android:onClick="precedent"
                        />
                    <Button
                        android:layout_marginTop="300dp"
                        android:id="@+id/btnannuler"
                        android:text="@string/annuler"
                        android:onClick="annuler2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/etape3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#E3DAC9"
                    android:orientation="vertical">


                    <TextView
                        android:text="@string/signature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="111dp"
                        android:id="@+id/SignatureTextView"
                        android:textColor="#000000"
                        android:layout_marginLeft="15dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />
                    <Button
                        android:id="@+id/signature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="signer"
                        android:text="Signer"
                        android:layout_marginTop="90dp"
                        android:layout_marginLeft="50dp"
                        />


                    <Button
                        android:layout_marginTop="300dp"
                        android:id="@+id/btndemarrer"
                        android:text="@string/demarrer"
                        android:onClick="demarrer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="240dp"

                        />
                    <Button
                        android:layout_marginTop="300dp"
                        android:id="@+id/btnprecedent2"
                        android:text="@string/precedent"
                        android:onClick="precedent2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="130dp"
                        />
                    <Button
                        android:layout_marginTop="300dp"
                        android:id="@+id/btnannuler3"
                        android:text="@string/annuler"
                        android:onClick="annuler3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        />
                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</RelativeLayout>